# ontology-nexus

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  rule-engine-lowcode-design.ts  sample.ttl
backend/: .dockerignore  Dockerfile  alembic.ini  check_data.py  check_po17.py  check_tech.py  debug_ast.py  main.py  pyproject.toml  start_mcp_servers.py  test_ontology_prefix_fix.py  verify_action_fix.py  verify_aliases.py  verify_placeholder.py  verify_resolution.py
backend/alembic/: env.py
backend/alembic/versions/: 41880421d374_add_multi_role_support.py  80a7d5ebda72_change_label_to_jsonb.py  872f0312eba0_add_pg_graph_storage_tables.py  8e8a5581c064_add_user_conversation_rules_tables.py  cb01d9ad81d9_add_scheduled_tasks_tables.py  def036ff4583_add_rules_and_action_definitions_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: actions.py  auth.py  chat.py  config.py  conversations.py  data_mappings.py  data_products.py  deps.py  graph.py  mcp.py  roles.py  rules.py  scheduled_tasks.py  users.py
backend/app/core/: config.py  database.py  init_db.py  neo4j_pool.py  security.py
backend/app/data/: non_llm_templates.json
backend/app/mcp/: action_server.py  action_server_backup.py  query_server.py
backend/app/models/: __init__.py  conversation.py  graph.py  llm_config.py  mcp_config.py  role.py  rule.py  scheduled_task.py  user.py
backend/app/repositories/: __init__.py  rule_repository.py  scheduled_task_repository.py
backend/app/rule_engine/: __init__.py  action_executor.py  action_registry.py  context.py  cypher_translator.py  evaluator.py  event_emitter.py  functions.py  grammar.lark  models.py  (+4 more)
backend/rules/: supplier_rules.dsl
backend/scripts/: check_db_product.py  check_entity.py  check_mappings.py  debug_grpc_conn.py  fix_product_host.py  test_app_client.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_cron_parser.py  test_graph_tools.py  test_ontology_features.py  test_permissions.py  test_pg_graph_storage_events.py  test_repositories.py  test_rule_models.py  test_rule_models_integration.py  test_scheduled_tasks_api.py  test_schema_matcher_fix.py  test_security.py
backend/work_ticket_emulator/: ServiceOnto.ttl  import_data.py  main.py  models.py  t3bCalculator.py
(+236 files in other folders)
