[project]
name = "kg-qa-backend"
version = "0.1.0"
description = "Knowledge Graph Q&A Application Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "rdflib>=7.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "cryptography>=44.0.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.2.0",  # 用于 Alembic 迁移（同步驱动）
    "aiosqlite>=0.20.0",
    "greenlet>=3.3.1",
    "jieba>=0.42.1",
    "httpx[socks]>=0.28.1",
    "httpcore[socks]>=1.0.9",
    "lark>=1.1",
    "alembic>=1.18.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
