[project]
name = "work-ticket-emulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastmcp>=3.1.0",
    "grpcio>=1.78.0",
    "grpcio-reflection>=1.78.0",
    "httpx[socks]>=0.28.1",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.48",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
